feat(index.js): new message
This adds a new message to the console.log command

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "semantic-release-test",
-  "version": "0.0.0-development",
+  "name": "rluders-semantic-release-test",
+  "version": "0.0.25",
   "main": "src/index.js",
   "author": "Ricardo Lüders <rluders@redhat.com>",
   "license": "MIT",
