ci(release.yaml): fixing npm token

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -58,5 +58,5 @@ jobs:
       - name: 🚀 Publish the release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: yarn semantic-release
